--- a/Develop/index.html
+++ b/Develop/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>website</title>  <!--Make the tittle more specific to the content of the webpage-->
 </head>
 
 <body>
-    <div class="header">
+    <div class="header"> <!--Substitute for semantic header tag-->
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <div>                                           <!--Switch to nav tag-->
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -24,54 +24,54 @@
             </ul>
         </div>
     </div>
-    <div class="hero"></div>
-    <div class="content">
-        <div class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+    <div class="hero"></div>        <!--change to fig tag-->
+    <div class="content">           <!--change to main tag-->
+        <div class="search-engine-optimization">    <!--change to section tag--> <!--add id to link to the nav bar-->
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" /> <!--add alt -->
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
-        <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+        <div id="online-reputation-management" class="online-reputation-management"> <!--change to section tag-->
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" /> <!--add alt -->
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
-        <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+        <div id="social-media-marketing" class="social-media-marketing"> <!--change to section tag-->
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" /> <!--add alt -->
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </div>
     </div>
-    <div class="benefits">
-        <div class="benefit-lead">
+    <div class="benefits"> <!-- change to aside tag-->
+        <div class="benefit-lead"> <!--change to section tag-->
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" /> <!--add alt-->
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-        <div class="benefit-brand">
+        <div class="benefit-brand"> <!--change to section tag-->
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" />  <!--add alt-->
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-        <div class="benefit-cost">
+        <div class="benefit-cost"> <!--change to section tag-->
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" />
+            <img src="./assets/images/cost-management.png" />  <!--add alt-->
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
     </div>
-    <div class="footer">
+    <div class="footer"> <!--change to footer tag-->
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
@@ -80,3 +80,4 @@
 </body>
 
 </html>
+<!--update the classes in case of possibles changes after reviewing the stylesheet.css-->
