Reviewed and commented stylesheet

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div class="header"> <!--Substitute for semantic header tag-->
+    <header class="header"> <!--Substitute for semantic header tag-->
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>                                           <!--Switch to nav tag-->
             <ul>
