--- a/index.html
+++ b/index.html
@@ -9,26 +9,26 @@
 
 <body>
 
-    <header> 
+    <header>  <!--Navegation bar linked to each section-->
         <h1>Hori<span>seo</span>n</h1>
         <nav>                                           
             <ul>
                 <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
+                    <a href="#search-engine-optimization" title="Search Engine Optimization Permalink">Search Engine Optimization</a>
                 </li>
                 <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
+                    <a href="#online-reputation-management" tittle="Online Reputation Management Permalink">Online Reputation Management</a>
                 </li>
                 <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
+                    <a href="#social-media-marketing" title="Social Media Marketing Permalink">Social Media Marketing</a>
                 </li>
             </ul>
         </nav>
     </header>
 
-    <figure id="hero"></figure>
+    <figure id="hero"></figure> <!--Main image-->
 
-    <main id="content">           
+    <main id="content">           <!--Services provided by the agency-->
         <section id="search-engine-optimization" class="services">     
             <img src="./assets/images/search-engine-optimization.jpg" alt="Search Engine Optimization" class="float-left" /> 
             <h2>Search Engine Optimization</h2>
@@ -38,7 +38,7 @@
         </section>
 
         <section id="online-reputation-management" class="services"> 
-            <img src="./assets/images/online-reputation-management.jpg" alt="Online Reputation Management" class="float-right" /> <!--add alt -->
+            <img src="./assets/images/online-reputation-management.jpg" alt="Online Reputation Management" class="float-right" /> 
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
@@ -46,7 +46,7 @@
         </section>
 
         <section id="social-media-marketing" class="services"> 
-            <img src="./assets/images/social-media-marketing.jpg" alt="Social Media Marketing" class="float-left" /> <!--add alt -->
+            <img src="./assets/images/social-media-marketing.jpg" alt="Social Media Marketing" class="float-left" /> 
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -55,7 +55,7 @@
 
     </main>
 
-    <aside id="benefits">
+    <aside id="benefits">   <!--Benefits from hiring this agency-->
         <section class="benefit"> 
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Lead Generation"/>
@@ -82,7 +82,7 @@
 
     </aside>
 
-    <footer>
+    <footer> <!--This is the footer-->
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
