--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon Marketing Agency Webpage</title>
+    <title>Horiseon Marketing Agency Webpage</title>  <!--Made the tittle more specific to the content of the webpage-->
 </head>
 
+<!--All the classes and Id's were updated to the new stylesheet-->
 <body>
-
-    <header>  <!--Navegation bar linked to each section-->
+    <header>                                <!--Header: Switched 'div' for 'header' tag-->
         <h1>Hori<span>seo</span>n</h1>
-        <nav>                                           
+        <nav>                               <!--Nav Bar: Switched 'div' for 'nav' tag-->             
             <ul>
-                <li>
+                <li>                        <!--Added a tittle to each 'a' element-->
                     <a href="#search-engine-optimization" title="Search Engine Optimization Permalink">Search Engine Optimization</a>
                 </li>
                 <li>
@@ -26,11 +26,11 @@
         </nav>
     </header>
 
-    <figure id="hero"></figure> <!--Main image-->
+    <figure id="hero"></figure> <!--Main image: switched 'div' for figure tag -->
 
-    <main id="content">           <!--Services provided by the agency-->
-        <section id="search-engine-optimization" class="services">     
-            <img src="./assets/images/search-engine-optimization.jpg" alt="Search Engine Optimization" class="float-left" /> 
+    <main id="content">           <!--Switched from 'div' to a 'main' tag and the child elements were replaced by 'section' tags-->
+        <section id="search-engine-optimization" class="services">     <!--Included an 'ID' to this section so it'd link to the nav bar-->
+            <img src="./assets/images/search-engine-optimization.jpg" alt="Search Engine Optimization" class="float-left" /> <!--Added an 'alt' property-->
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -38,7 +38,7 @@
         </section>
 
         <section id="online-reputation-management" class="services"> 
-            <img src="./assets/images/online-reputation-management.jpg" alt="Online Reputation Management" class="float-right" /> 
+            <img src="./assets/images/online-reputation-management.jpg" alt="Online Reputation Management" class="float-right" /> <!--Added an 'alt' property-->
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
@@ -46,7 +46,7 @@
         </section>
 
         <section id="social-media-marketing" class="services"> 
-            <img src="./assets/images/social-media-marketing.jpg" alt="Social Media Marketing" class="float-left" /> 
+            <img src="./assets/images/social-media-marketing.jpg" alt="Social Media Marketing" class="float-left" /> <!--Added an 'alt' property-->
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -55,10 +55,10 @@
 
     </main>
 
-    <aside id="benefits">   <!--Benefits from hiring this agency-->
+    <aside id="benefits">   <!--Switched from 'div' to 'aside' tag and replaced all the 'div' inside for 'section' tag-->
         <section class="benefit"> 
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt="Lead Generation"/>
+            <img src="./assets/images/lead-generation.png" alt="Lead Generation"/> <!--Added an 'alt' property-->
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
@@ -66,7 +66,7 @@
 
         <section class="benefit">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="Brand Awareness"/>
+            <img src="./assets/images/brand-awareness.png" alt="Brand Awareness"/> <!--Added an 'alt' property-->
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
@@ -74,7 +74,7 @@
 
         <section class="benefit">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"  alt="Cost Management"/>
+            <img src="./assets/images/cost-management.png"  alt="Cost Management"/> <!--Added an 'alt' property-->
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
@@ -82,7 +82,7 @@
 
     </aside>
 
-    <footer> <!--This is the footer-->
+    <footer> <!--Replaced the 'div' tag for a 'footer' tag-->
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
